--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,7 @@
 build:
   docker:
     web: Dockerfile
+  config:
+    REACT_APP_API_URL: https://realworld-docker-api
 run:
   web: serve -l $PORT -s build
