--- a/heroku.yml
+++ b/heroku.yml
@@ -2,6 +2,6 @@ build:
   docker:
     web: Dockerfile
   config:
-    REACT_APP_API_URL: https://realworld-docker-api/
+    REACT_APP_API_URL: https://realworld-docker-api.herokuapp.com/
 run:
   web: serve -l $PORT -s build
